# TestItNow

./: .gitignore  CMakeLists.txt  README.md
examples/: basicUsage.cpp  test1.cpp  test2.cpp  test3.cpp
include/TestItNow/: TestItNow.hpp  entryPoint.hpp  generator.hpp  macros.hpp  main.inl  output.hpp  output.inl  result.hpp  test.hpp  test.inl  testManager.hpp  testManager.inl  testRegister.hpp
